Renamed the 'turn.html' file from 'public' directory to 'web' directory. Modified the 'turn.mjs' file in the 'web' directory. Made these changes to improve the file structure and organization.

--- a/web/turn.html
+++ b/web/turn.html
@@ -406,6 +406,7 @@
 
     <script>
         // Placeholder data
+        const data = '{{data}}';
         const messages = [
             {
                 role: 'robot',
